web_app/backend/services/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: service-api
  name: service-api
spec:
  type: ClusterIP # NodePort (если фронт и бек будут по хттп общаться)
  ports:
    - name: "5011"
      protocol: TCP
      port: 5011
      targetPort: 5011
      # nodePort: 31000
  selector:
    io.kompose.service: service-api
